// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextField should render as textarea 1`] = `
.c2 {
  word-wrap: break-word;
  resize: none;
  display: block;
  width: 100%;
  max-width: 100%;
  border: 1px solid;
  border-radius: 0.25rem;
  border-color: #bfbfbf;
  outline: none;
  background-color: #ffffff;
  color: #373737;
  line-height: 1.5;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 2.25rem;
  padding: 4px 0.75rem;
  font-size: 1rem;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
  height: auto;
  -webkit-transition: border 0.2s ease;
  transition: border 0.2s ease;
}

.c2:hover {
  border-color: #3c5ad0;
}

.c2:focus {
  border-color: #3c5ad0;
  box-shadow: inset 0 0 0 2px #e8ecf5;
}

.c2:disabled,
.c2 [disabled] {
  border-color: #bfbfbf;
  background-color: #e0e0e0;
  color: #8b8b8b;
  cursor: not-allowed;
}

.c2::-webkit-input-placeholder {
  color: #bfbfbf;
}

.c2::-moz-placeholder {
  color: #bfbfbf;
}

.c2:-ms-input-placeholder {
  color: #bfbfbf;
}

.c2::placeholder {
  color: #bfbfbf;
}

.c4 {
  position: absolute;
  top: -7px;
  left: 7px;
  padding: 0 2px;
  background-color: #fff;
  color: #373737;
  font-size: 0.75rem;
  line-height: 1;
  pointer-events: none;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c0 {
  position: relative;
  margin-bottom: 0.5rem;
  margin-top: 10px;
}

.c0 .c5:invalid,
.c0 .c1:invalid {
  box-shadow: none;
}

.c0 .c5:invalid ~ .c3,
.c0 .c1:invalid ~ .c3 {
  top: 9px;
  left: 1px;
  padding: 0 0.5rem;
  color: #bfbfbf;
  font-size: 1rem;
}

.c0 .c5:focus ~ .c3,
.c0 .c1:focus ~ .c3 {
  top: -7px;
  left: 7px;
  padding: 0 2px;
  background-color: #fff;
  color: #373737;
  font-size: 0.75rem;
}

.c0 .c5:focus ~ .c6,
.c0 .c1:focus ~ .c6 {
  opacity: 1;
}

<div
  class="c0"
>
  <textarea
    class="c1 c2"
    required=""
    rows="1"
    style="overflow-x: hidden; word-wrap: break-word; overflow-y: hidden;"
  />
  <label
    class="c3 c4"
  >
    Text Field(textarea)
  </label>
</div>
`;

exports[`TextField should render correctly 1`] = `
.c2 {
  display: block;
  width: 100%;
  max-width: 100%;
  border: 1px solid;
  border-radius: 0.25rem;
  border-color: #bfbfbf;
  outline: none;
  background-color: #ffffff;
  color: #373737;
  line-height: 1.5;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 2.25rem;
  padding: 4px 0.75rem;
  font-size: 1rem;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c2:hover {
  border-color: #3c5ad0;
}

.c2:focus {
  border-color: #3c5ad0;
  box-shadow: inset 0 0 0 2px #e8ecf5;
}

.c2:disabled,
.c2 [disabled] {
  border-color: #bfbfbf;
  background-color: #e0e0e0;
  color: #8b8b8b;
  cursor: not-allowed;
}

.c2::-webkit-input-placeholder {
  color: #bfbfbf;
}

.c2::-moz-placeholder {
  color: #bfbfbf;
}

.c2:-ms-input-placeholder {
  color: #bfbfbf;
}

.c2::placeholder {
  color: #bfbfbf;
}

.c4 {
  position: absolute;
  top: -7px;
  left: 7px;
  padding: 0 2px;
  background-color: #fff;
  color: #373737;
  font-size: 0.75rem;
  line-height: 1;
  pointer-events: none;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c0 {
  position: relative;
  margin-bottom: 0.5rem;
  margin-top: 10px;
}

.c0 .c1:invalid,
.c0 .Textarea__StyledTextarea-vlcri7-0:invalid {
  box-shadow: none;
}

.c0 .c1:invalid ~ .c3,
.c0 .Textarea__StyledTextarea-vlcri7-0:invalid ~ .c3 {
  top: 9px;
  left: 1px;
  padding: 0 0.5rem;
  color: #bfbfbf;
  font-size: 1rem;
}

.c0 .c1:focus ~ .c3,
.c0 .Textarea__StyledTextarea-vlcri7-0:focus ~ .c3 {
  top: -7px;
  left: 7px;
  padding: 0 2px;
  background-color: #fff;
  color: #373737;
  font-size: 0.75rem;
}

.c0 .c1:focus ~ .c5,
.c0 .Textarea__StyledTextarea-vlcri7-0:focus ~ .c5 {
  opacity: 1;
}

<div
  class="c0"
>
  <input
    class="c1 c2"
    required=""
    value=""
  />
  <label
    class="c3 c4"
  >
    placeholder
  </label>
</div>
`;

exports[`TextField should render correctly with defaultValue 1`] = `
.c2 {
  display: block;
  width: 100%;
  max-width: 100%;
  border: 1px solid;
  border-radius: 0.25rem;
  border-color: #bfbfbf;
  outline: none;
  background-color: #ffffff;
  color: #373737;
  line-height: 1.5;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 2.25rem;
  padding: 4px 0.75rem;
  font-size: 1rem;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c2:hover {
  border-color: #3c5ad0;
}

.c2:focus {
  border-color: #3c5ad0;
  box-shadow: inset 0 0 0 2px #e8ecf5;
}

.c2:disabled,
.c2 [disabled] {
  border-color: #bfbfbf;
  background-color: #e0e0e0;
  color: #8b8b8b;
  cursor: not-allowed;
}

.c2::-webkit-input-placeholder {
  color: #bfbfbf;
}

.c2::-moz-placeholder {
  color: #bfbfbf;
}

.c2:-ms-input-placeholder {
  color: #bfbfbf;
}

.c2::placeholder {
  color: #bfbfbf;
}

.c4 {
  position: absolute;
  top: -7px;
  left: 7px;
  padding: 0 2px;
  background-color: #fff;
  color: #373737;
  font-size: 0.75rem;
  line-height: 1;
  pointer-events: none;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c0 {
  position: relative;
  margin-bottom: 0.5rem;
  margin-top: 10px;
}

.c0 .c1:invalid,
.c0 .Textarea__StyledTextarea-vlcri7-0:invalid {
  box-shadow: none;
}

.c0 .c1:invalid ~ .c3,
.c0 .Textarea__StyledTextarea-vlcri7-0:invalid ~ .c3 {
  top: 9px;
  left: 1px;
  padding: 0 0.5rem;
  color: #bfbfbf;
  font-size: 1rem;
}

.c0 .c1:focus ~ .c3,
.c0 .Textarea__StyledTextarea-vlcri7-0:focus ~ .c3 {
  top: -7px;
  left: 7px;
  padding: 0 2px;
  background-color: #fff;
  color: #373737;
  font-size: 0.75rem;
}

.c0 .c1:focus ~ .c5,
.c0 .Textarea__StyledTextarea-vlcri7-0:focus ~ .c5 {
  opacity: 1;
}

<div
  class="c0"
>
  <input
    class="c1 c2"
    required=""
    value="text field"
  />
  <label
    class="c3 c4"
  >
    placeholder
  </label>
</div>
`;

exports[`TextField should render with maxLength 1`] = `
.c2 {
  display: block;
  width: 100%;
  max-width: 100%;
  border: 1px solid;
  border-radius: 0.25rem;
  border-color: #bfbfbf;
  outline: none;
  background-color: #ffffff;
  color: #373737;
  line-height: 1.5;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 2.25rem;
  padding: 4px 0.75rem;
  font-size: 1rem;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c2:hover {
  border-color: #3c5ad0;
}

.c2:focus {
  border-color: #3c5ad0;
  box-shadow: inset 0 0 0 2px #e8ecf5;
}

.c2:disabled,
.c2 [disabled] {
  border-color: #bfbfbf;
  background-color: #e0e0e0;
  color: #8b8b8b;
  cursor: not-allowed;
}

.c2::-webkit-input-placeholder {
  color: #bfbfbf;
}

.c2::-moz-placeholder {
  color: #bfbfbf;
}

.c2:-ms-input-placeholder {
  color: #bfbfbf;
}

.c2::placeholder {
  color: #bfbfbf;
}

.c6 {
  position: absolute;
  top: -7px;
  left: 7px;
  padding: 0 2px;
  background-color: #fff;
  color: #373737;
  font-size: 0.75rem;
  line-height: 1;
  pointer-events: none;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c4 {
  position: absolute;
  right: -1px;
  bottom: -2px;
  padding: 1px 5px;
  border: 1px solid;
  border-radius: 999px;
  border-color: #3c5ad0;
  opacity: 0;
  background-color: #fff;
  font-size: 0.625rem;
  line-height: 1;
}

.c0 {
  position: relative;
  margin-bottom: 0.5rem;
  margin-top: 10px;
}

.c0 .c1:invalid,
.c0 .Textarea__StyledTextarea-vlcri7-0:invalid {
  box-shadow: none;
}

.c0 .c1:invalid ~ .c5,
.c0 .Textarea__StyledTextarea-vlcri7-0:invalid ~ .c5 {
  top: 9px;
  left: 1px;
  padding: 0 0.5rem;
  color: #bfbfbf;
  font-size: 1rem;
}

.c0 .c1:focus ~ .c5,
.c0 .Textarea__StyledTextarea-vlcri7-0:focus ~ .c5 {
  top: -7px;
  left: 7px;
  padding: 0 2px;
  background-color: #fff;
  color: #373737;
  font-size: 0.75rem;
}

.c0 .c1:focus ~ .c3,
.c0 .Textarea__StyledTextarea-vlcri7-0:focus ~ .c3 {
  opacity: 1;
}

<div
  class="c0"
>
  <input
    class="c1 c2"
    maxlength="20"
    required=""
    value=""
  />
  <div
    class="c3 c4"
  >
    20
  </div>
  <label
    class="c5 c6"
  >
    placeholder
  </label>
</div>
`;
